--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@
 SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
 DATABASE_URL=sqlite:///dev.db
 SCHEMA=flask_schema
+
+AWS_BUCKET_NAME="<BUCKET NAME>"
+AWS_ACCESS_KEY="<EXAMPLE_KEY>"
+AWS_SECRET_ACCESS_KEY="<EXAMPLE>"
+AWS_DOMAIN=https://"<DOMAIN-NAME>".s3.amazonaws.com/
